resolving downgrade to jdk 1.8